[package]
name = "catchr"
version = "0.2.2"
authors = ["Dzejkop <jakubtrad@gmail.com>"]
edition = "2018"
description = "A testing framework inspired by Catch for C++"
repository = "https://github.com/Dzejkop/catchr"
documentation = "https://docs.rs/catchr-core"
readme = "../README.md"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = { version = "1.0", features = [] }
itertools = "0.8.2"
catchr-core = "0.1.2"
