[package]
name = "catchr-core"
version = "0.1.1"
authors = ["Dzejkop <jakubtrad@gmail.com>"]
edition = "2018"
description = "Core library of catchr the testing framework"
repository = "https://github.com/Dzejkop/catchr"
documentation = "https://docs.rs/catchr-core"
readme = "README.md"
license = "MIT"

[dependencies]
syn = { version = "1.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = { version = "1.0", features = [] }
itertools = "0.8.2"

[dev-dependencies]
test-case = "1.0.0"
